<resources>
    <string name="app_name">BBCNewsApp</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="error">Unexpected Error</string>
    <string name="no_news">No news found</string>
    <string name="search_hint">Keyword to search</string>
    <string name="search">Search</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="technology">Technology</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="general">General</string>
</resources>
